Completed Train/Valid/Test Splits

--- a/project_7_starter.ipynb
+++ b/project_7_starter.ipynb
@@ -1730,9 +1730,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def train_valid_test_split(all_x, all_y, train_size, valid_size, test_size):\n",
     "    \"\"\"\n",
@@ -1772,8 +1780,20 @@
     "    assert train_size + valid_size + test_size == 1.0\n",
     "    \n",
     "    # TODO: Implement\n",
+    "    dates = all_x.index.levels[0]\n",
+    "    num_of_days = len(dates)\n",
+    "    train_split = round(train_size * num_of_days)\n",
+    "    valid_split = round((valid_size + train_size) * num_of_days)\n",
     "    \n",
-    "    return None, None, None, None, None, None\n",
+    "    x_train = all_x.loc[:dates[train_split-1]]\n",
+    "    x_valid = all_x.loc[dates[train_split]:dates[valid_split-1]]\n",
+    "    x_test = all_x.loc[dates[valid_split]:]\n",
+    "    \n",
+    "    y_train = all_y.loc[:dates[train_split-1]]\n",
+    "    y_valid = all_y.loc[dates[train_split]:dates[valid_split-1]]\n",
+    "    y_test = all_y.loc[dates[valid_split]:]\n",
+    "    \n",
+    "    return x_train, x_valid, x_test, y_train, y_valid, y_test\n",
     "\n",
     "\n",
     "project_tests.test_train_valid_test_split(train_valid_test_split)"
@@ -1788,9 +1808,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Mean_Reversion_Sector_Neutral_Smoothed</th>\n",
+       "      <th>Momentum_1YR</th>\n",
+       "      <th>Overnight_Sentiment_Smoothed</th>\n",
+       "      <th>adv_120d</th>\n",
+       "      <th>adv_20d</th>\n",
+       "      <th>dispersion_120d</th>\n",
+       "      <th>dispersion_20d</th>\n",
+       "      <th>market_vol_120d</th>\n",
+       "      <th>market_vol_20d</th>\n",
+       "      <th>volatility_20d</th>\n",
+       "      <th>...</th>\n",
+       "      <th>sector_Technology</th>\n",
+       "      <th>sector_Consumer Defensive</th>\n",
+       "      <th>sector_Industrials</th>\n",
+       "      <th>sector_Utilities</th>\n",
+       "      <th>sector_Financial Services</th>\n",
+       "      <th>sector_Real Estate</th>\n",
+       "      <th>sector_Communication Services</th>\n",
+       "      <th>sector_Consumer Cyclical</th>\n",
+       "      <th>sector_Energy</th>\n",
+       "      <th>sector_Basic Materials</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2013-01-03 00:00:00+00:00</th>\n",
+       "      <th>Equity(0 [A])</th>\n",
+       "      <td>-0.26276899</td>\n",
+       "      <td>-1.20797813</td>\n",
+       "      <td>-1.48566901</td>\n",
+       "      <td>1.33857307</td>\n",
+       "      <td>1.39741144</td>\n",
+       "      <td>0.01326964</td>\n",
+       "      <td>0.01117804</td>\n",
+       "      <td>0.12966421</td>\n",
+       "      <td>0.13758558</td>\n",
+       "      <td>-1.21980876</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Equity(1 [AAL])</th>\n",
+       "      <td>0.09992624</td>\n",
+       "      <td>1.71347052</td>\n",
+       "      <td>0.91934963</td>\n",
+       "      <td>1.13999355</td>\n",
+       "      <td>1.08115517</td>\n",
+       "      <td>0.01326964</td>\n",
+       "      <td>0.01117804</td>\n",
+       "      <td>0.12966421</td>\n",
+       "      <td>0.13758558</td>\n",
+       "      <td>1.56621970</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Equity(2 [AAP])</th>\n",
+       "      <td>1.66913824</td>\n",
+       "      <td>-1.53506144</td>\n",
+       "      <td>1.50773340</td>\n",
+       "      <td>-0.30154668</td>\n",
+       "      <td>-0.91934963</td>\n",
+       "      <td>0.01326964</td>\n",
+       "      <td>0.01117804</td>\n",
+       "      <td>0.12966421</td>\n",
+       "      <td>0.13758558</td>\n",
+       "      <td>-1.47040391</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Equity(3 [AAPL])</th>\n",
+       "      <td>1.69874602</td>\n",
+       "      <td>1.19311071</td>\n",
+       "      <td>-1.36799226</td>\n",
+       "      <td>1.72837731</td>\n",
+       "      <td>1.72837731</td>\n",
+       "      <td>0.01326964</td>\n",
+       "      <td>0.01117804</td>\n",
+       "      <td>0.12966421</td>\n",
+       "      <td>0.13758558</td>\n",
+       "      <td>1.61781282</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Equity(5 [ABC])</th>\n",
+       "      <td>-1.11399249</td>\n",
+       "      <td>-0.50920924</td>\n",
+       "      <td>-0.02941919</td>\n",
+       "      <td>0.17651513</td>\n",
+       "      <td>0.22799871</td>\n",
+       "      <td>0.01326964</td>\n",
+       "      <td>0.01117804</td>\n",
+       "      <td>0.12966421</td>\n",
+       "      <td>0.13758558</td>\n",
+       "      <td>-1.36721767</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            Mean_Reversion_Sector_Neutral_Smoothed  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])                                -0.26276899   \n",
+       "                          Equity(1 [AAL])                               0.09992624   \n",
+       "                          Equity(2 [AAP])                               1.66913824   \n",
+       "                          Equity(3 [AAPL])                              1.69874602   \n",
+       "                          Equity(5 [ABC])                              -1.11399249   \n",
+       "\n",
+       "                                            Momentum_1YR  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])      -1.20797813   \n",
+       "                          Equity(1 [AAL])     1.71347052   \n",
+       "                          Equity(2 [AAP])    -1.53506144   \n",
+       "                          Equity(3 [AAPL])    1.19311071   \n",
+       "                          Equity(5 [ABC])    -0.50920924   \n",
+       "\n",
+       "                                            Overnight_Sentiment_Smoothed  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])                      -1.48566901   \n",
+       "                          Equity(1 [AAL])                     0.91934963   \n",
+       "                          Equity(2 [AAP])                     1.50773340   \n",
+       "                          Equity(3 [AAPL])                   -1.36799226   \n",
+       "                          Equity(5 [ABC])                    -0.02941919   \n",
+       "\n",
+       "                                              adv_120d     adv_20d  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])     1.33857307  1.39741144   \n",
+       "                          Equity(1 [AAL])   1.13999355  1.08115517   \n",
+       "                          Equity(2 [AAP])  -0.30154668 -0.91934963   \n",
+       "                          Equity(3 [AAPL])  1.72837731  1.72837731   \n",
+       "                          Equity(5 [ABC])   0.17651513  0.22799871   \n",
+       "\n",
+       "                                            dispersion_120d  dispersion_20d  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])          0.01326964      0.01117804   \n",
+       "                          Equity(1 [AAL])        0.01326964      0.01117804   \n",
+       "                          Equity(2 [AAP])        0.01326964      0.01117804   \n",
+       "                          Equity(3 [AAPL])       0.01326964      0.01117804   \n",
+       "                          Equity(5 [ABC])        0.01326964      0.01117804   \n",
+       "\n",
+       "                                            market_vol_120d  market_vol_20d  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])          0.12966421      0.13758558   \n",
+       "                          Equity(1 [AAL])        0.12966421      0.13758558   \n",
+       "                          Equity(2 [AAP])        0.12966421      0.13758558   \n",
+       "                          Equity(3 [AAPL])       0.12966421      0.13758558   \n",
+       "                          Equity(5 [ABC])        0.12966421      0.13758558   \n",
+       "\n",
+       "                                            volatility_20d  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])        -1.21980876   \n",
+       "                          Equity(1 [AAL])       1.56621970   \n",
+       "                          Equity(2 [AAP])      -1.47040391   \n",
+       "                          Equity(3 [AAPL])      1.61781282   \n",
+       "                          Equity(5 [ABC])      -1.36721767   \n",
+       "\n",
+       "                                                    ...            \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])             ...             \n",
+       "                          Equity(1 [AAL])           ...             \n",
+       "                          Equity(2 [AAP])           ...             \n",
+       "                          Equity(3 [AAPL])          ...             \n",
+       "                          Equity(5 [ABC])           ...             \n",
+       "\n",
+       "                                           sector_Technology  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])                False   \n",
+       "                          Equity(1 [AAL])              False   \n",
+       "                          Equity(2 [AAP])              False   \n",
+       "                          Equity(3 [AAPL])              True   \n",
+       "                          Equity(5 [ABC])              False   \n",
+       "\n",
+       "                                           sector_Consumer Defensive  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])                        False   \n",
+       "                          Equity(1 [AAL])                      False   \n",
+       "                          Equity(2 [AAP])                      False   \n",
+       "                          Equity(3 [AAPL])                     False   \n",
+       "                          Equity(5 [ABC])                      False   \n",
+       "\n",
+       "                                            sector_Industrials  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])                  False   \n",
+       "                          Equity(1 [AAL])                 True   \n",
+       "                          Equity(2 [AAP])                False   \n",
+       "                          Equity(3 [AAPL])               False   \n",
+       "                          Equity(5 [ABC])                False   \n",
+       "\n",
+       "                                           sector_Utilities  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])               False   \n",
+       "                          Equity(1 [AAL])             False   \n",
+       "                          Equity(2 [AAP])             False   \n",
+       "                          Equity(3 [AAPL])            False   \n",
+       "                          Equity(5 [ABC])             False   \n",
+       "\n",
+       "                                           sector_Financial Services  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])                        False   \n",
+       "                          Equity(1 [AAL])                      False   \n",
+       "                          Equity(2 [AAP])                      False   \n",
+       "                          Equity(3 [AAPL])                     False   \n",
+       "                          Equity(5 [ABC])                      False   \n",
+       "\n",
+       "                                           sector_Real Estate  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])                 False   \n",
+       "                          Equity(1 [AAL])               False   \n",
+       "                          Equity(2 [AAP])               False   \n",
+       "                          Equity(3 [AAPL])              False   \n",
+       "                          Equity(5 [ABC])               False   \n",
+       "\n",
+       "                                           sector_Communication Services  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])                            False   \n",
+       "                          Equity(1 [AAL])                          False   \n",
+       "                          Equity(2 [AAP])                          False   \n",
+       "                          Equity(3 [AAPL])                         False   \n",
+       "                          Equity(5 [ABC])                          False   \n",
+       "\n",
+       "                                           sector_Consumer Cyclical  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])                       False   \n",
+       "                          Equity(1 [AAL])                     False   \n",
+       "                          Equity(2 [AAP])                      True   \n",
+       "                          Equity(3 [AAPL])                    False   \n",
+       "                          Equity(5 [ABC])                     False   \n",
+       "\n",
+       "                                           sector_Energy  \\\n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])            False   \n",
+       "                          Equity(1 [AAL])          False   \n",
+       "                          Equity(2 [AAP])          False   \n",
+       "                          Equity(3 [AAPL])         False   \n",
+       "                          Equity(5 [ABC])          False   \n",
+       "\n",
+       "                                           sector_Basic Materials  \n",
+       "2013-01-03 00:00:00+00:00 Equity(0 [A])                     False  \n",
+       "                          Equity(1 [AAL])                   False  \n",
+       "                          Equity(2 [AAP])                   False  \n",
+       "                          Equity(3 [AAPL])                  False  \n",
+       "                          Equity(5 [ABC])                   False  \n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "features = [\n",
     "    'Mean_Reversion_Sector_Neutral_Smoothed', 'Momentum_1YR',\n",
